--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "hotstart": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "express-session": "^1.16.1",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "multer": "^1.4.1",
+    "mysql": "^2.16.0",
+    "request": "^2.88.0",
+    "svg-captcha": "^1.3.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
