--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,12 +11,13 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
     "express-session": "^1.16.1",
+    "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "request": "^2.88.0",
+    "sequelize": "^5.21.13",
     "svg-captcha": "^1.3.12"
   },
   "devDependencies": {
