--- a/back-end-backUp/package.json
+++ b/back-end-backUp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "back-end",
+  "name": "back-end-backup",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,6 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.1",
-    "mysql": "^2.16.0",
     "mysql2": "^2.1.0",
     "request": "^2.88.0",
     "sequelize": "^5.21.13",
