--- a/vue_nikeshop/package.json
+++ b/vue_nikeshop/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
