--- a/back-end-backUp/package.json
+++ b/back-end-backUp/package.json
@@ -15,6 +15,7 @@
     "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.1",
     "mysql2": "^2.1.0",
