--- a/back-end-backUp/package.json
+++ b/back-end-backUp/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "request": "^2.88.0",
     "sequelize": "^5.21.13",
